chore: fix extra scrollbar

--- a/packages/devtools/client/styles/global.css
+++ b/packages/devtools/client/styles/global.css
@@ -1,5 +1,6 @@
 html {
   --at-apply: font-sans;
+  overflow: hidden;
 }
 
 html.dark {
